syntax = "proto3";

package proto;

service StreamService {
//服务器流
    rpc List(StreamRequest) returns (stream StreamResponse) {};
//客户端流
    rpc Record(stream StreamRequest) returns (StreamResponse) {};
//双向流
    rpc Route(stream StreamRequest) returns (stream StreamResponse) {};
//函数调用
    rpc CallDemo(CallRequest) returns (CallResponse) {};

}
message CallRequest {
  string CallString = 1;
}
message CallResponse {
  string CallString = 1;
}
message StreamPoint {
  string name = 1;
  int32 value = 2;
}

message StreamRequest {
  StreamPoint pt = 1;
}

message StreamResponse {
  StreamPoint pt = 1;
}

// 运行命令  当前文件夹下:protoc --go_out=plugins=grpc:. *.proto